<resources>
    <string name="app_name">Calculator App</string>
    <string name="calculator"> Calculator</string>
    <string name="enter_first_number"> Enter first number</string>
    <string name="enter_second_number"> Enter second number</string>
    <string name="add"> +</string>
    <string name="subtract"> -</string>
    <string name="multiply"> *</string>
    <string name="divide"> /</string>
    <string name="result"> Result</string>
</resources>